--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,11 @@
-button {
+.green {
+    background-color: green;
+}
+
+.blue {
+    background-color: blue;
+}
+
+.red {
     background-color: red;
 }
