--- a/templates/buttons/three_buttons.html.twig
+++ b/templates/buttons/three_buttons.html.twig
@@ -3,17 +3,24 @@
 {% block title %}Three buttons homework{% endblock %}
 
 {% block content %}
-    <button id="1" value="0">1</button><br/>
-    <button id="2" value="0">2</button><br/>
-    <button id="3" value="0">3</button>
+    <div class="row">
+        <div class="col-sm-1">
+            <input type="button" id="1" value="0" class="btn red"/></div>
+        <div class="col-sm-1">
+            <input type="button" id="2" value="0" class="btn blue"/>
+        </div>
+        <div class="col-sm-1">
+            <input type="button" id="3" value="0" class="btn green"/>
+        </div>
+    </div>
     <script>
         $(document).ready(function () {
-            $('button').on('click', function (e) {
+            $('input').on('click', function (e) {
                 e.preventDefault();
                 let id = $(this).attr('id');
-                // var $link = $(e.currentTarget);
-                // $.ajax({method: 'POST', url: $link.attr('href')}).done(function (data) {
-                // });
+                let count = $(this).attr('value');
+                count++;
+                $(this).attr('value', count);
                 $.ajax({
                     url: "/click_button",
                     data: {
